--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,11 +9,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(37, 37, 37);
+  background-color: rgb(16, 16, 16);
   color: aliceblue;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+    background-color: #4dcf44;
+    background-color: #d9bc2c;
+    color: #333333
 }
